<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerActivity">
  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="527dp"
      android:layout_height="297dp"

      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.396"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0"
      app:srcCompat="@drawable/background"
      tools:ignore="ImageContrastCheck"
      android:contentDescription="@string/todo" />

  <Button
      android:id="@+id/btnEditProfile2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/edit_profile"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.877"
      tools:ignore="HardcodedText" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/constraintLayout2"
      android:layout_width="422dp"
      android:layout_height="93dp"
      android:background="@color/design_default_color_primary_variant"
      android:backgroundTint="@color/design_default_color_primary_dark"
      app:layout_constraintBottom_toBottomOf="@+id/imageView3"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      tools:layout_editor_absoluteX="-6dp"
      tools:ignore="MissingConstraints">

    <Button
        android:id="@+id/button"
        android:layout_width="106dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/home"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="25dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browse"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.488"
        tools:layout_editor_absoluteX="158dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.488"
        tools:layout_editor_absoluteX="292dp" />
  </androidx.constraintlayout.widget.ConstraintLayout>

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="153dp"
      android:layout_height="158dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.198"
      tools:ignore="MissingConstraints,ImageContrastCheck"
      tools:layout_editor_absoluteX="11dp"
      tools:srcCompat="@tools:sample/avatars"
      android:contentDescription="@string/todo" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/jane_doe"
      android:textSize="34sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/imageView3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.7"
      app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.166"
      tools:ignore="HardcodedText" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:drawablePadding="15dp"
      android:text="@string/dublin"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/textView2"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/textView2"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.234"
      app:drawableLeftCompat="@drawable/ic_baseline_location_on_24" />

  <TextView
      android:id="@+id/textView8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:drawablePadding="15dp"
      android:text="@string/_0877562263"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/textView7"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/textView7"
      tools:layout_editor_absoluteY="221dp"
      tools:ignore="MissingConstraints"
      app:drawableLeftCompat="@drawable/ic_baseline_contact_phone_24" />

</androidx.constraintlayout.widget.ConstraintLayout>