<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TradeProfileActivity">


  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="556dp"
      android:layout_height="292dp"
      android:contentDescription="@string/todo"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
      app:layout_constraintHorizontal_bias="0.503"
      app:layout_constraintStart_toStartOf="@+id/constraintLayout"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0"
      app:srcCompat="@drawable/background"
      tools:ignore="ContentDescription,ImageContrastCheck" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/constraintLayout"
      android:layout_width="405dp"
      android:layout_height="70dp"
      android:background="@android:color/holo_blue_dark"
      android:backgroundTint="@color/purple_700"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.01"
      tools:ignore="DuplicateIds">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="405dp"
        android:layout_height="70dp"
        android:layout_marginBottom="660dp"
        android:background="@android:color/holo_blue_dark"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp">

      <Button
          android:id="@+id/btnHome"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@color/white"
          android:backgroundTint="@color/white"
          android:text="@string/home"
          android:textSize="16sp"
          android:textStyle="bold"
          app:iconTint="@color/white"
          tools:layout_editor_absoluteX="15dp"
          tools:layout_editor_absoluteY="11dp" />

      <Button
          android:id="@+id/btnBrowse"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@color/white"
          android:text="@string/browse"
          android:textSize="16sp"
          android:textStyle="bold"
          tools:ignore="HardcodedText"
          tools:layout_editor_absoluteX="140dp"
          tools:layout_editor_absoluteY="11dp" />

      <Button
          android:id="@+id/btnSearch"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@color/white"
          android:text="@string/search"
          android:textSize="16sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:ignore="HardcodedText,MissingConstraints"
          tools:layout_editor_absoluteX="286dp" />
    </

        androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:iconTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteY="11dp" />

    <Button
        android:id="@+id/btnBrowse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:background="@color/white"
        android:text="@string/browse"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnHome"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toEndOf="@+id/btnBrowse"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,TextContrastCheck" />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <ImageView
      android:id="@+id/imageView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/todo"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/constraintLayout"
      app:layout_constraintTop_toTopOf="@+id/constraintLayout"
      app:layout_constraintVertical_bias="0.157"
      tools:ignore="ContentDescription,ImageContrastCheck"
      tools:srcCompat="@tools:sample/avatars" />

  <Button
      android:id="@+id/button4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/edit_profile"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/textView5"
      app:layout_constraintStart_toStartOf="@+id/textView5"
      app:layout_constraintTop_toTopOf="@+id/constraintLayout"
      app:layout_constraintVertical_bias="0.923"
      tools:ignore="HardcodedText" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="192dp"
      android:layout_height="29dp"
      android:text="John Doe"
      android:textColor="@color/black"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/imageView3"
      app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
      app:layout_constraintHorizontal_bias="0.685"
      app:layout_constraintStart_toStartOf="@+id/constraintLayout"
      app:layout_constraintTop_toTopOf="@+id/constraintLayout"
      app:layout_constraintVertical_bias="0.135"
      tools:ignore="HardcodedText" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="90dp"
      android:layout_height="27dp"
      android:drawablePadding="15dp"
      android:text="@string/dublin"
      android:textColor="@color/black"
      android:textSize="16sp"
      android:textStyle="bold"
      app:drawableLeftCompat="@drawable/ic_baseline_location_on_24"
      app:layout_constraintBottom_toBottomOf="@+id/imageView3"
      app:layout_constraintEnd_toEndOf="@+id/textView3"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/textView3"
      app:layout_constraintTop_toTopOf="@+id/constraintLayout"
      app:layout_constraintVertical_bias="0.187" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="134dp"
      android:layout_height="26dp"
      android:layout_marginTop="208dp"
      android:drawablePadding="15dp"
      android:text="@string/_0872037711"
      android:textColor="@color/black"
      android:textSize="16sp"
      app:drawableLeftCompat="@drawable/ic_baseline_contact_phone_24"
      app:layout_constraintBottom_toBottomOf="@+id/imageView3"
      app:layout_constraintEnd_toEndOf="@+id/textView6"
      app:layout_constraintHorizontal_bias="0.136"
      app:layout_constraintStart_toStartOf="@+id/textView6"
      app:layout_constraintTop_toTopOf="@+id/constraintLayout"
      app:layout_constraintVertical_bias="0.0" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:drawablePadding="15dp"
      android:text="Plumber"
      android:textColor="@color/black"
      android:textSize="16sp"
      android:textStyle="bold"
      app:drawableLeftCompat="@drawable/ic_baseline_engineering_24"
      app:layout_constraintBottom_toBottomOf="@+id/imageView3"
      app:layout_constraintEnd_toEndOf="@+id/textView4"
      app:layout_constraintHorizontal_bias="0.181"
      app:layout_constraintStart_toStartOf="@+id/textView4"
      app:layout_constraintTop_toTopOf="@+id/constraintLayout"
      app:layout_constraintVertical_bias="0.239"
      tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>